--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -23,7 +23,8 @@
   "providers": [
     "./providers/AppProvider",
     "@adonisjs/core",
-    "@adonisjs/lucid"
+    "@adonisjs/lucid",
+    "adonis-lucid-soft-deletes"
   ],
   "aceProviders": [
     "@adonisjs/repl"
