--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/core": "^5.4.0",
     "@adonisjs/lucid": "^16.3.2",
     "@adonisjs/repl": "^3.1.7",
+    "adonis-lucid-soft-deletes": "^1.3.3",
     "luxon": "^2.1.1",
     "mysql": "^2.18.1",
     "proxy-addr": "^2.0.7",
