--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "youch-terminal": "^1.1.1"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.0.10",
+    "@adonisjs/bouncer": "^2.2.5",
     "@adonisjs/core": "^5.4.0",
     "@adonisjs/lucid": "^16.3.2",
+    "@adonisjs/redis": "^7.0.9",
     "@adonisjs/repl": "^3.1.7",
     "adonis-lucid-soft-deletes": "^1.3.3",
     "luxon": "^2.1.1",
     "mysql": "^2.18.1",
+    "phc-bcrypt": "^1.0.7",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
